ALS-1974: Initial additions for .active on header tabs

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -1,7 +1,7 @@
 <div class="row header-row">
 	<img class="logo-img col-md-4" src="{{logoPath}}"></a>
 </div>
-<div class="row" style="margin-bottom: 5px">
+<div class="row" style="margin-top:6px">
     <span class="col-md-2"></span>
     {{#not_empty applications}}
     <div class="col-md-2 dropdown" id="applications-dropdown">
