--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -1,5 +1,5 @@
 <div class="row header-row">
-	<img class="logo-img col-md-4" src="{{logoPath}}"></a>
+	<img class="logo-img col-md-4" src="{{logoPath}}">
 </div>
 <div class="row" style="margin-top:6px">
     <span class="col-md-2"></span>
