--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -785,6 +785,11 @@ body {
 	border-radius: 3px;
 	padding: 0;
 	overflow: hidden;
-	text-decoration: none;
+	text-decoration: none !important;
+	color: #fff;
+}
+
+.a0-zocial:hover {
+	background: rgba(0,0,0,.2);
 	color: #fff;
 }
