--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -39,10 +39,10 @@
         <div class="col-md-1 dropdown btn btn-default header-btn authenticated-visible" id="help-dropdown">
             <span class="dropdown-toggle col-md-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</span>
             <ul class="dropdown-menu" role="menu">
-                {{#if videoLink}}<li class="dropdown"><a href="{{{videoLink}}}">Video Demonstration</a></li>{{/if}}
-                {{#if pdfLink}}<li class="dropdown"><a href="{{{pdfLink}}}">User Guide</a></li>{{/if}}
-                {{#if jupyterExampleLink}}<li class="dropdown"><a href="{{{jupyterExampleLink}}}">Jupyter Examples</a></li>{{/if}}
-                {{#if helpLink}}<li class="dropdown"><a href="{{{helpLink}}}">Contact Us</a></li>{{/if}}
+                {{#if videoLink}}<li class="dropdown"><a href="{{{videoLink}}}" target="_blank">Video Demonstration</a></li>{{/if}}
+                {{#if pdfLink}}<li class="dropdown"><a href="{{{pdfLink}}}" target="_blank">User Guide</a></li>{{/if}}
+                {{#if jupyterExampleLink}}<li class="dropdown"><a href="{{{jupyterExampleLink}}}" target="_blank">Jupyter Examples</a></li>{{/if}}
+                {{#if helpLink}}<li class="dropdown"><a href="{{{helpLink}}}" target="_blank">Contact Us</a></li>{{/if}}
         </div>
         <a id="logout-btn" class="col-md-1 btn btn-default header-btn authenticated-visible">Log Out</a>
     {{/if}}
