--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/addUserConnectionForm.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/addUserConnectionForm.hbs
@@ -3,7 +3,7 @@
 		<div class='row'>
 			<label for={{this.id}}>{{this.label}} (required)</label>
 			<input type="text" required name="{{this.id}}" id="{{this.id}}" style="width: 100%;">
-			<span class="error-{{this.id}} hidden"></span>
+			<span id="error-{{this.id}}" class="hidden"></span>
 		</div>
 	{{/each}}
 	{{#each connection.optionalFields}}
