User mgmt fixes (#72)
* uncomment 'save user' logic

* Add code to validate unique emails

* fix logic for identifying duplicate emails

* change style name and fix typos

* allow unique emails per connection

* typo

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/addUserConnectionForm.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/psamaui/user/addUserConnectionForm.hbs
@@ -3,6 +3,7 @@
 		<div class='row'>
 			<label for={{this.id}}>{{this.label}} (required)</label>
 			<input type="text" required name="{{this.id}}" id="{{this.id}}" style="width: 100%;">
+			<span id="error-{{this.id}}" class="intitially-hidden"></span>
 		</div>
 	{{/each}}
 	{{#each connection.optionalFields}}
