update help tooltip with new variable name

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
@@ -16,7 +16,7 @@
       	<p>Phenotype result tabs start with a number and are separated by underscores. Variant INFO result tabs are typically 2 capital letter abbreviations. There is a full listing and explanation of the INFO columns below.</p>
       	<br>
         <div>
-        	{{#each this}}<div class="row"><span class="col-md-4">{{key}}</span><span class="col-md-8">{{description}}</span></div><br>{{/each}}</p>
+        	{{#each infoColumns}}<div class="row"><span class="col-md-4">{{key}}</span><span class="col-md-8">{{description}}</span></div><br>{{/each}}</p>
       	</div>
       </div>
       <div class="modal-footer">
