move variant button template into output panel

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/output/outputPanel.hbs
@@ -4,6 +4,8 @@
 	<span id="patient-count" class="blue center large">{{#if queryRan}}{{#if countDisplayOverride}}{{> (countDisplayOverride) totalPatients}}{{else}}{{outputPanel_obfuscate totalPatients}}{{/if}}{{else}}-{{/if}}</span><br></br>
 	<span class="center medium">Total Participants</span><br></br>
     <div class="container" id="variant-data-container">
+    	<a class="center btn btn-default hidden" id="variant-data-btn">Variant Explorer</a>
+		<div id="variant-spinner"></div>
     </div>
 	<div class="container" id="pic-sure-instances">
 <a class="center btn btn-default" id="select-btn">Select Data For Export</a>
