Aggregate variant explorer styling (#77)
* add ouput button label parameter to filterlist.js

* update help tooltip with new variable name

* fix help modal to show correct button labels

* move variant button template into output panel

* clean up some unused elements

* bump httpd release

* some HBS syntax

* add HBS equality helper

* typo

* clean up some HBS template issues

* add default styling for container

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
@@ -11,12 +11,16 @@
 
       	<p>When you select a search result, you will be presented with options to filter your subset using this phenotype or variant INFO column. Phenotype filters apply to study participants directly. If you filter by age less than 50, you will only have participants included in your participants counts and export data that match that filter. Variant INFO columns apply to variants that are used to filter patients. In order for a participants to be included, it must match ALL of the Phenotype filters that you have created as well as have at least one variant that matches ALL of your variant INFO filters.</p>
 
-      	<p>Once you have filtered your subset of participants, you can click the "Select Data for Export" button at which time you will be presented with a data selection tree. Check the boxes you wish to export data for and click the "Prepare Download" button. This will create an export for only the participants that are in your filtered subset with only the variables you have selected. Once the "Download" button appears, click it to receive your data. No matter what checkboxes you click, your results will always include phenotypes that were used in filters as well as the ID of each participant.</p>
-
+  		{{#eq queryExportType "EXPORT_ASYNC"}}
+  		<p>Once you have filtered your subset of participants, you can click the "Select Data for Export" button at which time you will be presented with a data selection tree. Check the boxes you wish to export data for and click the "{{#if queryButtonLabel}}{{queryButtonLabel}}{{else}}Export Data{{/if}}" button. This will create an export for only the participants that are in your filtered subset with only the variables you have selected. Once the "Download" button appears, click it to receive your data. No matter what checkboxes you click, your results will always include phenotypes that were used in filters as well as the ID of each participant.</p>
+		{{else}}
+		<p>Once you have filtered your subset of participants, you can click the "Select Data for Export" button at which time you will be presented with a data selection tree. Check the boxes you wish to export data for and click the "{{#if queryButtonLabel}}{{queryButtonLabel}}{{else}}Export Data{{/if}}" button. This will create an export for only the participants that are in your filtered subset with only the variables you have selected.  No matter what checkboxes you click, your results will always include phenotypes that were used in filters as well as the ID of each participant.</p>
+  		{{/eq}}
+      	
       	<p>Phenotype result tabs start with a number and are separated by underscores. Variant INFO result tabs are typically 2 capital letter abbreviations. There is a full listing and explanation of the INFO columns below.</p>
       	<br>
         <div>
-        	{{#each this}}<div class="row"><span class="col-md-4">{{key}}</span><span class="col-md-8">{{description}}</span></div><br>{{/each}}</p>
+        	{{#each infoColumns}}<div class="row"><span class="col-md-4">{{key}}</span><span class="col-md-8">{{description}}</span></div><br>{{/each}}</p>
       	</div>
       </div>
       <div class="modal-footer">
