--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
@@ -3,7 +3,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button id="close-modal-button" type="button" class="close" data-dismiss="modal" tabindex="3000">&times;</button>
                 <h4 class="modal-title">{{title}}</h4>
             </div>
             <div class="modal-body"></div>
