style updates & clean upp

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -761,6 +761,13 @@ body {
 	text-transform: none;
 }
 
+/* default hidden class is flagged as important, so can't be unset with show() */
 .intitially-hidden {
 	display: none;
+}
+
+.output-button-container {
+	width: 90%;
+}
+
 }
