--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
@@ -7,6 +7,7 @@
                 <h4 class="modal-title">{{title}}</h4>
             </div>
             <div class="modal-body"></div>
+            <div class="modal-footer"></div>
         </div>
     </div>
 </div>
