using standard module name for datatables.net, excluding modal div from tab focus

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/options/modal.hbs
@@ -1,4 +1,4 @@
-<div id="modalDialog" class="modal" role="dialog">
+<div id="modalDialog" class="modal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
         <div class="modal-content">
