--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -41,6 +41,7 @@
                 {{#if videoLink}}<li class="dropdown"><a href="{{{videoLink}}}" target="_blank">Video Demonstration</a></li>{{/if}}
                 {{#if pdfLink}}<li class="dropdown"><a href="{{{pdfLink}}}" target="_blank">User Guide</a></li>{{/if}}
                 {{#if jupyterExampleLink}}<li class="dropdown"><a href="{{{jupyterExampleLink}}}" target="_blank">Jupyter Examples</a></li>{{/if}}
+                {{#if documentationLink}}<li id="documentation-option" class="dropdown" aria-label="External documentation, clicking here will open a link  in a new tab"><a href="{{{documentationLink}}}">External Documentation</a></li>{{/if}}
                 {{#if helpLink}}<li class="dropdown"><a href="{{{helpLink}}}" target="_blank">Contact Us</a></li>{{/if}}
         </div>
         <a id="logout-btn" class="col btn btn-default header-btn authenticated-visible">Log Out</a>
