Fix tree when there is a very large item

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -974,6 +974,10 @@ input[type='checkbox'].categorical-filter-input {
     padding: 0 5px;
  }
 
+ #package-data #concept-tree {
+    max-width: 70vw;
+ }
+
  #package-data 
  #resource-id-display {
     display: flex;
