Move genomic filters to baseline

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/tree-select.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/tree-select.hbs
@@ -9,7 +9,7 @@
             {{/if}}
         {{/if}}
     </div>
-    <div class="panel-body">
+    <div class="tree-container panel-body tabable">
         <div id="tree"></div>
     </div>
 </div>
