--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/selection-search-panel.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/selection-search-panel.hbs
@@ -10,7 +10,7 @@
     {{/if}}
 </h3>
 <div id="{{searchId}}-container" class="selection-container space-even" aria-label="{{description}}" >
-    <div class="panel panel-default no-padding half-width">
+    <div class="panel panel-default no-padding selection-panel">
         <div class="panel-heading search-heading space-out">
             <h4 class="panel-title">{{searchContext}}</h4>
             {{#if description}}
@@ -21,9 +21,7 @@
         </div>
         <div class="panel-body">
             <div class="select-box">
-                <input type="search" id="{{searchId}}" class="selection-search-box form-control tabable" placeholder="{{placeholderText}}" title="Search box, {{placeholderText}}">
-                    {{!-- <input class="btn bg-transparent" value="" accesskey="r" type="reset"></input> --}}
-                </input>
+                <input type="search" id="{{searchId}}" class="selection-search-box form-control tabable" placeholder="{{placeholderText}}" title="Search box, {{placeholderText}}"></input>
                 <div class="value-container selection-search-results tabable" role="listbox" >
                     {{#each searchResultOptions}}
                     <input id="{{this}}" class="categorical-filter-input selectable list-item" type="checkbox" tabindex="-1" value="{{this}}" title="{{this}}" role="option"/>{{this}} <br />
